--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,5 @@
 {{page-title "Ember4"}}
 
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<h1>Hi worlds</h1>
 
 {{outlet}}
